force-app/main/default/objects/nepa_required_permit__c/nepa_required_permit__c.object-meta.xml
<CustomObject>
    <description>Structured record of each dependent federal permit required by a NEPA process. One record per permit. Used by the cross-agency permit dependency LWC to fetch live status from other agencies&apos; NEPA REST APIs. Maps to the CEQ Permits entity.</description>
    <label>NEPA Required Permit</label>
    <nameField>
        <displayFormat>RP-{00000000}</displayFormat>
        <label>Required Permit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEPA Required Permits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>