force-app/main/default/objects/nepa_required_permit__c/fields/nepa_actual_completion__c.field-meta.xml
<CustomField>
    <fullName>nepa_actual_completion__c</fullName>
    <description>Date the permit was actually issued, denied, or withdrawn. Populated by NepaAgencyPermitService live callout or manually by the permit coordinator. When populated alongside status = Issued, the permit is complete.</description>
    <inlineHelpText>Date the permit decision was issued, denied, or withdrawn.</inlineHelpText>
    <label>Actual Completion</label>
    <type>Date</type>
</CustomField>