force-app/main/default/objects/nepa_required_permit__c/fields/nepa_agency_endpoint_ref__c.field-meta.xml
<CustomField>
    <fullName>nepa_agency_endpoint_ref__c</fullName>
    <description>DeveloperName reference matching a NEPA_Agency_Endpoint__mdt record that holds the Named Credential and REST path for this agency's NEPA status API. Used by NepaAgencyPermitService to look up the endpoint configuration at runtime without hardcoded URLs.</description>
    <inlineHelpText>Reference to the NEPA_Agency_Endpoint__mdt record for the agency's permit status API (e.g., USACE_ORM2, FERC_eLIBRARY).</inlineHelpText>
    <label>Agency Endpoint Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>