force-app/main/default/objects/nepa_required_permit__c/fields/nepa_agency_system_url__c.field-meta.xml
<CustomField>
    <fullName>nepa_agency_system_url__c</fullName>
    <description>Public URL to the permit record in the agency&apos;s permitting system (e.g., USACE ORM2 permit page, EPA NPDES public notice, FERC eLibrary filing). Used by nepaPermitDependencies LWC for external link. Never store authenticated or credential-bearing URLs here.</description>
    <inlineHelpText>Public link to this permit record in the issuing agency&apos;s system.</inlineHelpText>
    <label>Agency System URL</label>
    <type>Url</type>
</CustomField>