force-app/main/default/objects/nepa_required_permit__c/fields/nepa_expected_completion__c.field-meta.xml
<CustomField>
    <fullName>nepa_expected_completion__c</fullName>
    <description>Projected date for permit issuance or decision. Set at record creation from nepa_sla_due_date__c (process start + statutory deadline days). May be updated by live agency callout via NepaAgencyPermitService when the agency provides a target date.</description>
    <inlineHelpText>Projected permit decision or issuance date.</inlineHelpText>
    <label>Expected Completion</label>
    <type>Date</type>
</CustomField>