force-app/main/default/objects/nepa_required_permit__c/fields/nepa_external_federal_id__c.field-meta.xml
<CustomField>
    <fullName>nepa_external_federal_id__c</fullName>
    <description>External identifier from the agency&apos;s permitting system (e.g., USACE action ID, FERC project number, EPA NPDES permit number). Used as the query key in NepaAgencyPermitService live callouts. ExternalId = true enables upsert from integration flows.</description>
    <externalId>true</externalId>
    <inlineHelpText>Agency-assigned permit application number or identifier from the external permitting system.</inlineHelpText>
    <label>External Federal ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>