force-app/main/default/objects/nepa_required_permit__c/fields/nepa_is_critical_path__c.field-meta.xml
<CustomField>
    <fullName>nepa_is_critical_path__c</fullName>
    <description>True when this permit is on the critical path — its absence blocks ROD/FONSI issuance. Drives nepa_blocked_permit_count__c rollup on IndividualApplication, which feeds NEPA_Litigation_Risk_Scorer permit gap penalty. Populated from RegulatoryAuthorizationType at record creation.</description>
    <inlineHelpText>When checked, this permit must be issued before ROD or FONSI can be signed. Delays here directly extend the NEPA clock.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Critical Path Permit</label>
    <type>Checkbox</type>
</CustomField>