force-app/main/default/objects/nepa_required_permit__c/fields/nepa_last_synced__c.field-meta.xml
<CustomField>
    <fullName>nepa_last_synced__c</fullName>
    <description>Timestamp of the most recent successful live callout to the agency's permit status API via NepaAgencyPermitService. Displayed in the nepaPermitDependencies LWC to indicate data freshness. Null means only locally-cached status is available.</description>
    <inlineHelpText>Last time permit status was confirmed via live agency API callout.</inlineHelpText>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>