force-app/main/default/objects/nepa_required_permit__c/fields/nepa_lead_agency__c.field-meta.xml
<CustomField>
    <fullName>nepa_lead_agency__c</fullName>
    <description>Federal agency responsible for issuing this permit or authorization (e.g., USACE, EPA, USFWS, FERC). Populated from RegulatoryAuthorizationType.IssuingDepartmentId at record creation. Used by the nepaPermitDependencies LWC for agency badge display.</description>
    <inlineHelpText>Federal agency responsible for issuing this permit (e.g., USACE, EPA, USFWS).</inlineHelpText>
    <label>Lead Agency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>