force-app/main/default/objects/nepa_required_permit__c/fields/nepa_nepa_stage_gate__c.field-meta.xml
<CustomField>
    <fullName>nepa_nepa_stage_gate__c</fullName>
    <description>The NEPA process stage at which this permit must have been initiated. Used by NEPA_Stage_Gate_Doc_Check to block ROD or FONSI advancement when critical-path permits in Not Started status exist past their required gate stage.</description>
    <inlineHelpText>NEPA stage at which this permit application must be initiated (e.g., Scoping, Draft EA/EIS, ROD/FONSI).</inlineHelpText>
    <label>Required Initiation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pre-Application</fullName><default>false</default><label>Pre-Application</label></value>
            <value><fullName>Scoping</fullName><default>false</default><label>Scoping</label></value>
            <value><fullName>Draft EA/EIS</fullName><default>false</default><label>Draft EA/EIS</label></value>
            <value><fullName>Final EA/EIS</fullName><default>false</default><label>Final EA/EIS</label></value>
            <value><fullName>ROD/FONSI</fullName><default>false</default><label>ROD/FONSI</label></value>
            <value><fullName>Any</fullName><default>true</default><label>Any</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>