force-app/main/default/objects/nepa_required_permit__c/fields/nepa_permit_notes__c.field-meta.xml
<CustomField>
    <fullName>nepa_permit_notes__c</fullName>
    <description>Free-text coordination history, agency contact notes, outstanding issues, and action items for this permit. Writable by the permit coordinator and by Agentforce Permit Coordinator action. Not used in scoring or logic — informational only.</description>
    <inlineHelpText>Coordination history, agency contacts, and outstanding issues for this permit requirement.</inlineHelpText>
    <label>Permit Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>