force-app/main/default/objects/nepa_required_permit__c/fields/nepa_permit_status__c.field-meta.xml
<CustomField>
    <fullName>nepa_permit_status__c</fullName>
    <description>Current status of this permit application. Updated by NepaAgencyPermitService live callout or manually by the permit coordinator. When a critical-path permit moves to Issued, the nepa_blocked_permit_count__c rollup decrements and NEPA_Litigation_Risk_Scorer re-fires.</description>
    <inlineHelpText>Current status of this permit or authorization request.</inlineHelpText>
    <label>Permit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Issued</fullName><default>false</default><label>Issued</label></value>
            <value><fullName>Denied</fullName><default>false</default><label>Denied</label></value>
            <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>