force-app/main/default/objects/nepa_required_permit__c/fields/nepa_permit_status_visual__c.field-meta.xml
<CustomField>
    <fullName>nepa_permit_status_visual__c</fullName>
    <description>Formula image field. Green flag = Issued (permit cleared). Red flag = Pending or Under Review (blocking). Yellow flag = Denied or Suspended (requires action). Blank = unknown status. In the nepa_required_permit__c related list on Scene 7-A, Issued + red for Pending renders the critical-path story (NPDES Issued = green; CWA 404 Pending = red) visually before the presenter narrates it. Also used in Scene 6-A (nepaPermitDependencies LWC context).</description>
    <formula>CASE(nepa_permit_status__c,
  &quot;Issued&quot;,        IMAGE(&quot;/img/samples/flag_green.gif&quot;,  &quot;Issued — Cleared&quot;, 16, 16),
  &quot;Approved&quot;,      IMAGE(&quot;/img/samples/flag_green.gif&quot;,  &quot;Approved — Cleared&quot;, 16, 16),
  &quot;Pending&quot;,       IMAGE(&quot;/img/samples/flag_red.gif&quot;,    &quot;Pending — Not Yet Issued&quot;, 16, 16),
  &quot;Under Review&quot;,  IMAGE(&quot;/img/samples/flag_red.gif&quot;,    &quot;Under Review — Not Yet Issued&quot;, 16, 16),
  &quot;Denied&quot;,        IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Denied — Requires Action&quot;, 16, 16),
  &quot;Suspended&quot;,     IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Suspended — Requires Action&quot;, 16, 16),
                   IMAGE(&quot;/s.gif&quot;, &quot;Unknown&quot;, 1, 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green = Issued/Approved. Red = Pending or Under Review. Yellow = Denied/Suspended. Visible in related list — reads the permit status story before opening the record.</inlineHelpText>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>