force-app/main/default/objects/nepa_required_permit__c/fields/nepa_permit_type__c.field-meta.xml
<CustomField>
    <fullName>nepa_permit_type__c</fullName>
    <description>The type of federal permit or authorization required. Populated by NEPA_Permit_Record_Creator from NEPA_Permit_Matrix__mdt and NEPA_Permit_Type_Catalog__mdt seed data.</description>
    <inlineHelpText>The type of federal permit or authorization required (e.g., CWA Section 404, ESA Section 7, NHPA Section 106).</inlineHelpText>
    <label>Permit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANILCA Alaska Interest Lands</fullName>
            </value>
            <value>
                <fullName>Atomic Energy Act Authorization</fullName>
            </value>
            <value>
                <fullName>BLM Application for Permit to Drill</fullName>
            </value>
            <value>
                <fullName>BLM Grazing Permit</fullName>
            </value>
            <value>
                <fullName>BLM Right-of-Way</fullName>
            </value>
            <value>
                <fullName>Clean Air Act Title V Operating Permit</fullName>
            </value>
            <value>
                <fullName>Clean Air NSR/PSD Permit</fullName>
            </value>
            <value>
                <fullName>CERCLA Record of Decision</fullName>
            </value>
            <value>
                <fullName>CWA Section 401 Water Quality Certification</fullName>
            </value>
            <value>
                <fullName>CWA Section 402 NPDES Permit</fullName>
            </value>
            <value>
                <fullName>CWA Section 404 Permit</fullName>
            </value>
            <value>
                <fullName>CZMA Federal Consistency Determination</fullName>
            </value>
            <value>
                <fullName>ESA Section 7 Consultation</fullName>
            </value>
            <value>
                <fullName>FAA AIP Approval</fullName>
            </value>
            <value>
                <fullName>FERC Certificate</fullName>
            </value>
            <value>
                <fullName>FERC FPA License</fullName>
            </value>
            <value>
                <fullName>FLPMA Plan Approval</fullName>
            </value>
            <value>
                <fullName>FLPMA Title V ROW Grant</fullName>
            </value>
            <value>
                <fullName>Geothermal Steam Act Lease</fullName>
            </value>
            <value>
                <fullName>MBTA Compliance</fullName>
            </value>
            <value>
                <fullName>MMPA Incidental Take Authorization</fullName>
            </value>
            <value>
                <fullName>NHPA Section 106 Consultation</fullName>
            </value>
            <value>
                <fullName>NRC Combined License</fullName>
            </value>
            <value>
                <fullName>OCSLA Lease/Plan Approval</fullName>
            </value>
            <value>
                <fullName>RCRA Hazardous Waste Permit</fullName>
            </value>
            <value>
                <fullName>Rivers and Harbors Act Section 9 Bridge Permit</fullName>
            </value>
            <value>
                <fullName>Rivers and Harbors Act Section 10 Permit</fullName>
            </value>
            <value>
                <fullName>SDWA UIC Permit</fullName>
            </value>
            <value>
                <fullName>Section 4(f) Evaluation</fullName>
            </value>
            <value>
                <fullName>SMCRA Surface Mining Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>