force-app/main/default/objects/nepa_required_permit__c/fields/nepa_process__c.field-meta.xml
<CustomField>
    <fullName>nepa_process__c</fullName>
    <description>Master-detail relationship to the IndividualApplication (NEPA process) that requires this permit. Cascade-deletes child permit records when the process is deleted. Required for rollup summaries on IndividualApplication.</description>
    <inlineHelpText>The NEPA process (IndividualApplication) that requires this permit or federal authorization.</inlineHelpText>
    <label>NEPA Process</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Required Permits</relationshipLabel>
    <relationshipName>Required_Permits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>