force-app/main/default/objects/nepa_required_permit__c/fields/nepa_regulatory_citation__c.field-meta.xml
<CustomField>
    <fullName>nepa_regulatory_citation__c</fullName>
    <description>Statutory or regulatory citation for this permit requirement (e.g., 33 USC 1344, 16 USC 1536, 36 CFR 800). Populated from RegulatoryAuthorizationType seed data at record creation. Displayed in permit dependency card.</description>
    <inlineHelpText>Statutory or CFR citation for this permit requirement (e.g., 33 USC 1344 for CWA Section 404).</inlineHelpText>
    <label>Regulatory Citation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>