force-app/main/default/objects/nepa_required_permit__c/fields/nepa_sla_overdue__c.field-meta.xml
<CustomField>
    <fullName>nepa_sla_overdue__c</fullName>
    <description>Formula checkbox: true when the SLA due date has passed and the permit is still active (not Issued, Denied, or Withdrawn). Used by the nepaPermitDependencies LWC for red overdue badge display. NEPA_Permit_SLA_Monitor evaluates this daily to create coordinator Tasks.</description>
    <inlineHelpText>Automatically checked when this permit is past its SLA due date and has not been resolved.</inlineHelpText>
    <formula>AND(
  NOT(ISBLANK(nepa_sla_due_date__c)),
  nepa_sla_due_date__c &lt; TODAY(),
  NOT(ISPICKVAL(nepa_permit_status__c, "Issued")),
  NOT(ISPICKVAL(nepa_permit_status__c, "Denied")),
  NOT(ISPICKVAL(nepa_permit_status__c, "Withdrawn"))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Overdue</label>
    <type>Checkbox</type>
</CustomField>