force-app/main/default/objects/nepa_required_permit__c/fields/nepa_statutory_deadline_days__c.field-meta.xml
<CustomField>
    <fullName>nepa_statutory_deadline_days__c</fullName>
    <description>Number of days from NEPA process start date to the statutory or regulatory deadline for this permit. Populated at record creation from RegulatoryAuthorizationType.nepa_statutory_deadline_days__c. Used to calculate nepa_sla_due_date__c.</description>
    <inlineHelpText>Days from process start to permit deadline per statute or regulation.</inlineHelpText>
    <label>Statutory Deadline (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>