force-app/main/default/objects/nepa_required_permit__c/fields/nepa_sync_status_visual__c.field-meta.xml
<CustomField>
    <fullName>nepa_sync_status_visual__c</fullName>
    <description>Formula image field. Green flag when nepa_last_synced__c is populated (live agency API data current). Red flag when null (only locally-cached permit status is available). Surfaces the API degradation state visually — coordinator sees amber/stale state without needing to parse a timestamp field. Designed for the nepaPermitDependencies view in the demo.</description>
    <formula>IF(ISBLANK(nepa_last_synced__c),
  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Agency API Unavailable — Cached Status Only&quot;, 16, 16) &amp; &quot; Cached Only&quot;,
  IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Live — Synced &quot; &amp; TEXT(DATEVALUE(nepa_last_synced__c)), 16, 16) &amp; &quot; Live&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green = permit status confirmed via live agency API. Red = no live sync; displaying last cached status. Check nepa_last_synced__c for timestamp.</inlineHelpText>
    <label>Agency Sync Status</label>
    <type>Text</type>
</CustomField>