force-app/main/default/objects/nepa_required_permit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>nepa_permit_type__c</columns>
    <columns>nepa_permit_status__c</columns>
    <columns>nepa_permit_status_visual__c</columns>
    <columns>nepa_is_critical_path__c</columns>
    <columns>nepa_lead_agency__c</columns>
    <columns>nepa_sla_due_date__c</columns>
    <columns>nepa_sla_overdue__c</columns>
</ListView>