force-app/main/default/objects/nepa_required_permit__c/listViews/Critical_Path_Overdue.listView-meta.xml
<ListView>
    <fullName>Critical_Path_Overdue</fullName>
    <filterScope>Everything</filterScope>
    <label>Critical Path — Overdue</label>
    <columns>Name</columns>
    <columns>nepa_permit_type__c</columns>
    <columns>nepa_permit_status__c</columns>
    <columns>nepa_permit_status_visual__c</columns>
    <columns>nepa_is_critical_path__c</columns>
    <columns>nepa_lead_agency__c</columns>
    <columns>nepa_sla_due_date__c</columns>
    <columns>nepa_sla_overdue__c</columns>
    <filters>
        <field>nepa_is_critical_path__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>nepa_sla_overdue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
</ListView>